docdir = $(pkgdatadir)/doc

doc_DATA = 4ti2_manual.pdf

## Manual sources.
HELPFILES = output-help.txt gensymm-help.txt genmodel-help.txt ppi-help.txt \
	hilbert-help.txt graver-help.txt zsolve-help.txt

EXTRA_DIST =					\
	4ti2_manual.pdf				\
	3by3magic.eps				\
	4ti2_manual.bib				\
	4ti2_manual.tex				\
	4ti2_manual_api.tex			\
	4ti2_manual_advanced.tex		\
	4ti2_manual_beginner.tex		\
	4ti2_manual_ref.tex			\
	amsabbrvurl.bst				\
	cubepicture.eps				\
	feasible.pdf				\
	feasible.pdf_t				\
	feasible_LP.pdf				\
	feasible_LP.pdf_t			\
	magicsqs.eps				\
	magicsqs.fig				\
	magicsqs.pdf				\
	magicsqs.pdf_t				\
	magicsqs_hil.fig			\
	magicsqs_hil.pdf			\
	magicsqs_hil.pdf_t			\
	magicsqs_ray.fig			\
	magicsqs_ray.pdf			\
	magicsqs_ray.pdf_t			\
	myfancyheadings.sty			\
	solved_IP.pdf				\
	solved_IP.pdf_t				\
	solved_LP.pdf				\
	solved_LP.pdf_t

# EXTRA_DIST += $(HELPFILES)

EXTRA_DIST +=					\
	version.tex version.tex.in

EXTRA_DIST +=					\
	deloera-hemmecke-koeppe-book.tex	\
	deloera-hemmecke-koeppe-cover.jpg

### We do not attempt to build the manual in Make targets.
### Before making a release, pdflatex the manual; we distribute the PDF.

.PHONY: update-help update-manual 

update-manual: update-help
	$(SED) 's/@[V]ERSION@/$(VERSION)/;' $(srcdir)/version.tex.in > $(srcdir)/version.tex
	-(cd $(srcdir) && pdflatex 4ti2_manual; pdflatex 4ti2_manual)

PROGRAMS_WITH_HELP =				\
	../src/util/gensymm			\
	../src/util/genmodel			\
	../src/util/output			\
	../src/ppi/ppi 				\
	../src/zsolve/zsolve 			\
	../src/zsolve/hilbert 			\
	../src/zsolve/graver 			\
	../src/groebner/qsolve 			\
	../src/groebner/rays 			\
	../src/groebner/circuits 		\
	../src/groebner/groebner		\
	../src/groebner/markov			\
	../src/groebner/minimize		\
	../src/groebner/normalform		\
	../src/groebner/walk			\
	../src/groebner/zbasis

update-help:
	for p in $(PROGRAMS_WITH_HELP); do					\
	  "$$p" --help > $(srcdir)/`basename $$p`-help.txt;	\
	done

## Update the HTML documentation on the website; use a symlink "html".

update-html: update-manual
	cp $(srcdir)/4ti2_manual.pdf $(srcdir)/html/
	for p in $(PROGRAMS_WITH_HELP); do			\
	  ( echo "<pre>" &&					\
	    echo "<!--- Autogenerated, do not edit. -->" &&	\
	    "$$p" --help && echo "</pre>" )			\
	    > $(srcdir)/html/`basename $$p`.html;		\
	done
