EXTRA_DIST= \
	00gnulib.m4 \
	absolute-header.m4 \
	alloca.m4 \
	assert_h.m4 \
	ax_cflags_warn_all.m4 \
	ax_check_compile_flag.m4 \
	ax_check_compiler_flags.m4 \
	ax_compiler_vendor.m4 \
	ax_prepend_flag.m4 \
	ax_require_defined.m4 \
	errno_h.m4 \
	exponentd.m4 \
	extensions.m4 \
	extern-inline.m4 \
	float_h.m4 \
	free.m4 \
	getopt.m4 \
	glpk-check.m4 \
	gmp-check.m4 \
	gnulib-cache.m4 \
	gnulib-common.m4 \
	gnulib-comp.m4 \
	gnulib-tool.m4 \
	include_next.m4 \
	intmax_t.m4 \
	inttypes_h.m4 \
	inttypes.m4 \
	limits-h.m4 \
	math_h.m4 \
	memchr.m4 \
	mmap-anon.m4 \
	multiarch.m4 \
	nocrash.m4 \
	off_t.m4 \
	pid_t.m4 \
	printf.m4 \
	size_max.m4 \
	ssize_t.m4 \
	stddef_h.m4 \
	stdint_h.m4 \
	stdint.m4 \
	stdio_h.m4 \
	stdlib_h.m4 \
	string_h.m4 \
	sys_types_h.m4 \
	trapv-check.m4 \
	unistd_h.m4 \
	vararrays.m4 \
	vasnprintf.m4 \
	vasprintf.m4 \
	warn-on-use.m4 \
	wchar_h.m4 \
	wchar_t.m4 \
	wint_t.m4 \
	xsize.m4 \
	zzgnulib.m4
