SUBDIRS =					\
	normalform				\
	qsolve					\
	graver					\
	gensymm					\
	groebner				\
	zsolve					\
	walk					\
	ppi					\
	zbasis					\
	output					\
	markov					\
	circuits				\
	genmodel				\
	minimize				\
	rays					\
	hilbert

# The check target runs automatic checks to verify that 4ti2 was compiled
# correctly and is running correctly.
check-local:
	./checkall

